Fixed Sidebar card overlap issue approaching 768px
As the screen gets smaller but is larger than 768px, the cards overlap the sidebar. Fixed this in css.

--- a/work_phase_4/css/component_skeletons/sidebar.css
+++ b/work_phase_4/css/component_skeletons/sidebar.css
@@ -21,7 +21,6 @@
 }
 
 .sidebar .card-container {
-
     padding: 0px;
     margin: 0;
 }
@@ -59,6 +58,7 @@
     right:2%;
     width: 25%;
     padding: 1rem;
+
     
 
     }
@@ -66,16 +66,23 @@
     .sidebar-subsection {
         background-color: var(--feature-gray-color);
         border-radius: 5px;
+            box-sizing: border-box;
+    overflow: hidden;
     }
 
     .sidebar .sidebar-subsection h1 {
         color: white;
     }
+
+    .sidebar .card-container {
+        max-width: 100%;
+    }
     .sidebar .card {
         max-width: 100%;
-        height: 120px;
+        max-height: 120px;
         flex-direction: row-reverse;
         justify-content: left;
+        box-sizing: border-box;
     
     }
     .sidebar .card img {
@@ -93,6 +100,11 @@
         align-content: center;
         width: 100%;
         
+    }
+
+    .sidebar .card .text-box h3,
+    .sidebar .card .text-box p {
+    font-size: clamp(0.8rem, 1.5vw, 1rem);
     }
 
 }   
